@@ -1,5 +1,6 @@
 COPYING
 INSTALLING
+LICENSE
 MANIFEST
 Makefile.PL
 README
@@ -18,6 +19,8 @@ t/addrs.t
 t/data.t
 t/head.t
 t/parts.t
+t/pod.t
+t/pod-coverage.t
 t/verify.t
 t/types.t
 testin/README
